add bracket domain and refactor controllers